[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netconf"
version = "0.0.1"  # Will be read from git tags by setuptools_scm
description = "NETCONF client and server implementations with both synchronous and asynchronous interfaces"
readme = "README.rst"
authors = [
    { name = "Christian Hopps", email = "chopps@gmail.com" },
]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.7"
dependencies = [
    "backports.socketpair>=3.5.0.2; sys_platform == 'win32' and python_version < '3.5'",
    "lxml>=3.1.0",
    "monotonic>=1.3",
    "paramiko>=1.10.1",
    "sshutil>=1.5.0",
]

[project.optional-dependencies]
async = ["asyncssh"]
dev = [
    "pytest>=3.0.0",
    "pytest-cov>=2.4.0",
    "pytest-asyncio>=0.10.0",
    "pylint>=1.7.0",
    "yapf>=0.20.0",
    "setuptools-scm",
    "twine",
    "wheel",
]

[project.scripts]
netconf-client = "netconf.__main__:main"
async-netconf-client = "async_netconf.__main__:main"

[tool.setuptools]
# Let setuptools automatically find packages
package-dir = { "" = "." }
packages = ["netconf", "async_netconf"]


[tool.setuptools.package-data]
"*" = ["*.xml", "*.xsd", "*.dtd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[check-manifest]
ignore = [
    ".github/*",
    "docs/*",
    "*.json",
    "*.xml",
    "*.yml",
    "*.yaml",
    "*.rst",
    "*.md",
    "*.txt"
]

[tool.setuptools_scm]
write_to = "_version.py"
write_to_template = """# coding: utf-8
# file generated by setuptools_scm
# don't change, don't track in version control
__version__ = version = '{version}'
"""
